@@ -260,9 +260,6 @@ save: 40
 // Do some visual effect on your character
 effect: 40
 
-// Display all items of a player's storage
-charstoragelist: 40
-
 // Display all items of a player's cart
 charcartlist: 40
 
