@@ -19,3 +19,4 @@ statsall: 40
 spiritball: 60
 itemlist: 40
 effect: 40
+storagelist: 40
